# playerfactory

./: .cproject  .project  CMakeLists.txt  COPYING  README  README.md  autogen.sh  clean-all.cmake  configure.ac
cmake/Modules/: FindClanLib.cmake  FindGDKmm.cmake  FindGStreamer.cmake  FindGTKmm.cmake  FindGlibmmUtils.cmake  FindPangomm.cmake
include/pipeline/: abstractplayer.hpp  pf_export.hpp  pipeline.hpp  player.hpp  playerfactory.hpp
include/pipeline/custom/: custom_comm_types.hpp  custompipeline.hpp  customplayer.hpp
include/pipeline/event/: playeventlistener.hpp
include/pipeline/generic/: dlnapipeline.hpp  dlnaplayer.hpp  genericpipeline.hpp  genericplayer.hpp
include/pipeline/utils/: options.hpp
playerfactory/src/: custompipeline.cpp
src/: CMakeLists.txt  Makefile.am  abstractplayer.cpp  custompipeline.cpp  customplayer.cpp  dlnapipeline.cpp  dlnaplayer.cpp  genericpipeline.cpp  genericplayer.cpp  options.cpp  pipeline.cpp  playerfactory.cpp
tests/: CMakeLists.txt  Makefile.am  factory-test.cpp  options-test.cpp
