include_directories (${pf_SOURCE_DIR}/include)

include_directories(${Glib_INCLUDE_DIRS})
include_directories(${GIO_INCLUDE_DIRS})
include_directories(${GSTREAMER_INCLUDE_DIRS})
message(STATUS "now check mmutils at tests")
if(OPTION_MMUTILS)
  message(STATUS "DEFINE_MMUTILS enabled... adding include dirs")
  add_definitions( -DUSE_GLIB_MMUTILS)
  include_directories(${Glibmm_INCLUDE_DIRS})
  include_directories(${GlibmmUtils_INCLUDE_DIRS})
endif(OPTION_MMUTILS)
#include_directories(${Glibmm_INCLUDE_DIRS})
#include_directories(${GlibmmUtils_INCLUDE_DIRS})
#include_directories (${pf_SOURCE_DIR}/tests)

link_directories(${pf_BINARY_DIR}/src)

add_executable(factory-test factory-test)
set_target_properties(factory-test PROPERTIES LINKER_LANGUAGE CXX)
if(OPTION_MMUTILS)
  message(STATUS "DEFINE_MMUTILS enabled... adding librarys")
  target_link_libraries(factory-test pf ${Glibmm_LIBRARIES} ${GlibmmUtils_LIBRARIES} ${GStreamer_LIBRARIES} ${GSTREAMER_LIBRARIES} ${Glib_LIBRARIES}  ${GIO_LIBRARIES})
else(OPTION_MMUTILS)
  target_link_libraries(factory-test pf ${GStreamer_LIBRARIES} ${GSTREAMER_LIBRARIES} ${Glib_LIBRARIES}  ${GIO_LIBRARIES})
endif(OPTION_MMUTILS)

add_executable(options-test options-test)
set_target_properties(options-test PROPERTIES LINKER_LANGUAGE CXX)
if(OPTION_MMUTILS)
  message(STATUS "DEFINE_MMUTILS enabled... adding librarys")
  target_link_libraries(options-test pf ${Glibmm_LIBRARIES} ${GlibmmUtils_LIBRARIES} ${GStreamer_LIBRARIES} ${GSTREAMER_LIBRARIES} ${Glib_LIBRARIES}  ${GIO_LIBRARIES})
else(OPTION_MMUTILS)
  target_link_libraries(options-test pf ${GStreamer_LIBRARIES} ${GSTREAMER_LIBRARIES} ${Glib_LIBRARIES}  ${GIO_LIBRARIES})
endif(OPTION_MMUTILS)
